--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ header{
 /* ================= SUPABASE CONFIG ================= */
 
 // 🔴 REPLACE THESE WITH YOUR REAL VALUES
-const SUPABASE_URL = "YOUR_SUPABASE_URL";
-const SUPABASE_KEY = "YOUR_SUPABASE_ANON_KEY";
+const SUPABASE_URL = "https://uqayciprokmithlsyjcb.supabase.co";
+const SUPABASE_KEY = "sb_publishable_SLXprYZvkwqAE5FDGJzZAw_I4Zn6yE1";
 
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
