--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ header{
 
 // 🔴 REPLACE THESE WITH YOUR REAL VALUES
 const SUPABASE_URL = "https://uqayciprokmithlsyjcb.supabase.co";
-const SUPABASE_KEY = "sb_publishable_SLXprYZvkwqAE5FDGJzZAw_I4Zn6yE1";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVxYXljaXByb2ttaXRobHN5amNiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwODUxNDAsImV4cCI6MjA4NzY2MTE0MH0.VzP6louhUhCQ1wkYT-blz9F240AxRZ59mYkoT_5_JSk";
 
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
